--- a/voices.html
+++ b/voices.html
@@ -7,75 +7,86 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 20px;
             background: url('群封.jpg') no-repeat center center/cover;
-            color: white;
-        }
-        h1 {
-            font-size: 30px;
-            color: #333;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .btn {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px;
-            font-size: 20px;
             color: #fff;
-            background-color: #ff4081;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-        }
-        .btn:hover {
-            background-color: #e91e63;
-        }
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
             text-align: center;
         }
-        .images {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 20px;
+        h1 {
+            font-size: 36px;
+            font-weight: bold;
+            color: #fff;
+            margin-bottom: 20px;
         }
-        .images img {
-            width: 100px;
-            height: 100px;
-            border-radius: 5px;
+        .intro {
+            background: rgba(200, 200, 200, 0.3); /* 浅灰色半透明背景 */
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto 40px auto;
+            line-height: 1.8;
+        }
+        .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+        .image-gallery img {
+            width: 180px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         video {
             width: 400px;
             height: 300px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            margin-bottom: 30px;
+        }
+        .back-link {
+            display: inline-block;
             margin-top: 20px;
+            font-size: 18px;
+            color: #ff4081;
+            text-decoration: none;
+            font-weight: bold;
+            border: 2px solid #ff4081;
+            padding: 10px 20px;
+            border-radius: 30px;
+            transition: all 0.3s ease;
+        }
+        .back-link:hover {
+            background-color: #ff4081;
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>脱口秀女演员群封</h1>
-        <p style="background-color: rgba(211, 211, 211, 0.8); padding: 10px; font-size: 16px;">
-            《T》中文版 2025 年 1 月特别策划了“脱口秀女演员群封”，当春天来临时，女演员们的声音也在网络上激起了不同的浪潮。这些声音，充满了对社会的洞察，也在群体文化中找到了属于自己的位置。
-        </p>
-
-        <div class="images">
-            <img src="小鹿.png" alt="小鹿">
-            <img src="鸟鸟.png" alt="鸟鸟">
-            <img src="唐香玉.png" alt="唐香玉">
-            <img src="颜怡颜悦.png" alt="颜怡颜悦">
-            <img src="Echo.png" alt="Echo">
-        </div>
-
-        <video controls>
-            <source src="ask.mov" type="video/mp4">
-            你的浏览器不支持该视频格式。
-        </video>
-
-        <a href="data.html" class="btn">下一页</a>
+    <h1>脱口秀女演员群封</h1>
+    
+    <div class="intro">
+        《T》中文版 2025 年 1 月特别策划了“脱口秀女演员群封”，当春天来临时。
     </div>
+
+    <div class="image-gallery">
+        <img src="小鹿.png" alt="小鹿">
+        <img src="鸟鸟.png" alt="鸟鸟">
+        <img src="唐香玉.png" alt="唐香玉">
+        <img src="颜怡颜悦.png" alt="颜怡颜悦">
+        <img src="Echo.png" alt="Echo">
+    </div>
+
+    <video controls>
+        <source src="ask.mov" type="video/mp4">
+        您的浏览器不支持视频播放。
+    </video>
+
+    <br>
+   <a href="data.html" class="btn">下一页</a>
 </body>
 </html>
