--- a/talkshow.html
+++ b/talkshow.html
@@ -10,31 +10,46 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('底图.jpg') no-repeat center center/cover;
+            font-family: Arial, sans-serif;
+            color: white;
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
-            font-family: Arial, sans-serif;
-            color: white;
+            position: relative;
+            overflow: hidden;
         }
+        
+        /* 添加半透明遮罩 */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('底图.jpg') no-repeat center center/cover;
+            opacity: 0.8; /* 降低透明度至80% */
+            z-index: -1;
+        }
+
         .container {
             max-width: 700px;
+            position: relative;
+            z-index: 1;
         }
+
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 70px;  /* 字号放大 */
+            font-size: 75px;  /* 增大字号 */
             font-weight: bold;
-            letter-spacing: 8px;  /* 增加字间距 */
+            letter-spacing: 10px;  /* 增加字间距 */
             color: #F1BBC9;  /* 芭蕾粉 */
             padding: 20px 50px;
-            border: 2px solid rgba(255, 255, 255, 0.3);  /* 透明边框 */
-            border-radius: 10px;
-            display: inline-block;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);  /* 增加立体阴影 */
-            background: rgba(255, 255, 255, 0.1);  /* 轻微透明背景 */
+            text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);  /* 添加更强的阴影 */
         }
+
         .btn {
             display: inline-block;
             margin-top: 30px;
@@ -50,10 +65,12 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
             transition: all 0.3s ease;
         }
+
         .btn:hover {
             background-color: #e91e63;
             transform: scale(1.05); /* 鼠标悬停放大效果 */
         }
+
         .btn::before {
             content: "👂🏻 "; /* 添加耳朵图标 */
             font-size: 22px;
